# greenshop

./: pyproject.toml
account/: admin.py  models.py
account/migrations/: 0001_initial.py
greenshop/: settings.py  urls.py
post/: models.py
post/migrations/: 0001_initial.py
product/: admin.py  choices.py  models.py  urls.py  views.py
product/migrations/: 0001_initial.py
